Fix grammar mistake in en-GB.json

--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -70,7 +70,7 @@
   "KEYBINDS/EMPTY": "N/A",
   "BYPASS": "Bypass",
   "BYPASS/HACK_ANTI_KICK": "Anti-Kick",
-  "BYPASS/HACK_ANTI_KICK/TIP": "Prevents you being blocked from player certain levels",
+  "BYPASS/HACK_ANTI_KICK/TIP": "Prevents you being blocked from playing certain levels",
   "BYPASS/HACK_MAIN_LEVELS": "Main Levels",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Unlocks main demon levels",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Music Customiser",
